# fmod-oxide

./: .gitignore  COVERAGE.2.02.md  COVERAGE.2.03.md  COVERAGE.md  Cargo.toml  README.md
emscripten-example/: Cargo.toml
emscripten-example/src/: main.rs
fmod-examples/: Cargo.toml
fmod-examples/examples/: 3d_core.rs  channel_groups.rs  convolution_reverb.rs  dsp_effect_per_speaker.rs  effect.rs  load_from_memory.rs  multiple_system.rs  net_stream.rs  play_sound.rs  play_stream.rs  template.rs
fmod-examples/src/: lib.rs
fmod-oxide/: COVERAGE.2.02.md  COVERAGE.2.03.md  Cargo.toml  build.rs
fmod-oxide/src/: lib.rs  owned.rs  result.rs  tests.rs
fmod-oxide/src/core/: debug.rs  enums.rs  file.rs  filesystem.rs  flags.rs  helpers.rs  memory.rs  mod.rs  reverb_3d.rs  reverb_presets.rs  sound_builder.rs  structs.rs  thread.rs
fmod-oxide/src/core/channel/: information.rs  mod.rs  playback_control.rs
fmod-oxide/src/core/channel_control/: callback.rs  dsp.rs  filtering.rs  general.rs  mod.rs  panning.rs  playback.rs  scheduling.rs  spatialization.rs  volume.rs
fmod-oxide/src/core/channel_group/: channel_management.rs  general.rs  group_management.rs  mod.rs
fmod-oxide/src/core/dsp/: callback.rs  channel_format.rs  connections.rs  data_parameters.rs  effect_parameters.rs  effects.rs  general.rs  metering.rs  mod.rs  parameter_traits.rs  parameters.rs  processing.rs
fmod-oxide/src/core/dsp_connection/: general.rs  mix_properties.rs  mod.rs
fmod-oxide/src/core/geometry/: general.rs  mod.rs  polygons.rs  spatialization.rs
fmod-oxide/src/core/sound/: data_reading.rs  defaults.rs  general.rs  information.rs  mod.rs  music.rs  relationship.rs  synchronization.rs
fmod-oxide/src/core/sound_group/: general.rs  group.rs  mod.rs  sound.rs
fmod-oxide/src/core/system/: builder.rs  callback.rs  creation.rs  device_selection.rs  filesystem.rs  general.rs  geometry.rs  information.rs  lifetime.rs  mod.rs  network.rs  plugin.rs  recording.rs  runtime_control.rs  setup.rs
fmod-oxide/src/studio/: bus.rs  enums.rs  mod.rs  structs.rs  vca.rs
fmod-oxide/src/studio/bank/: general.rs  loading.rs  lookups.rs  mod.rs
fmod-oxide/src/studio/command_replay/: callback.rs  general.rs  mod.rs  playback.rs  query.rs
fmod-oxide/src/studio/event_description/: attributes.rs  callback.rs  general.rs  instance.rs  mod.rs  parameter.rs  sample_data.rs  user_property.rs
fmod-oxide/src/studio/event_instance/: attributes_3d.rs  callback.rs  core.rs  general.rs  mod.rs  parameters.rs  playback.rs  playback_properties.rs  profiling.rs
fmod-oxide/src/studio/system/: bank.rs  builder.rs  callback.rs  command_replay.rs  general.rs  lifecycle.rs  listener.rs  misc.rs  mod.rs  parameter.rs  plugins.rs  profiling.rs
fmod-studio-examples/: Cargo.toml
fmod-studio-examples/examples/: 3d.rs  3d_multi.rs  event_parameter.rs  load_banks.rs  music_callbacks.rs  objectpan.rs  programmer_sound.rs  recording_playback.rs  simple_event.rs
fmod-studio-examples/src/: lib.rs
fmod-sys/: Cargo.toml  README.md  build.rs
fmod-sys/src/: channel_control.cpp  channel_control.h  lib.rs  wrapper.h
lanyard/: Cargo.toml  README.md
lanyard/src/: cstr.rs  cstring.rs  lib.rs
web-examples/emscripten/: Cargo.toml
web-examples/emscripten/.cargo/: config.toml
web-examples/wasm/: Cargo.toml  README.md  index.html  wasm_inspect.js
web-examples/wasm/.cargo/: config.toml
web-examples/wasm/src/: emscripten_stubs.rs  lib.rs  stubs.rs
web-examples/wasm/src/stubs/: emscripten.rs  math.rs  stdio.rs  stdlib.rs  string.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/coverage/: collect_c_functions.rs  collect_c_info.rs  mark_rust_functions.rs  mark_rust_references.rs  mod.rs
