[workspace]
resolver = "2"
members = [
  "fmod-oxide",
  "fmod-sys",
  "lanyard",
  "fmod-studio-examples",
  "fmod-examples",
  "xtask",
  "emscripten-example",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/melody-rs/fmod-oxide"
keywords = ["gamedev", "audio", "sound", "fmod"]
authors = ["Melody Madeline Lyons <melody@melody-is.gay>"]
