[package]
name = "fmod-oxide"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Zero cost bindings to FMOD and FMOD Studio"
repository = "https://github.com/Speak2Erase/fmod-oxide"
keywords = ["gamedev", "audio", "sound", "fmod"]
categories = ["api-bindings", "game-development", "multimedia::audio"]
readme = "../README.md"

build = "build.rs"

[lib]
name = "fmod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.2"
fmod-audio-sys = { version = "0.1.0", path = "../fmod-sys" }
lanyard = { version = "0.1.0", path = "../lanyard/" }
num_enum = "0.7.2"

document-features = "0.2"
bytemuck = { version = "1.23.0", features = ["extern_crate_alloc"] }

thiserror = "2.0.12"

[features]
## Disable Send + Sync impls for FMOD's types, making FMOD's thread-unsafe API safer
thread-unsafe = []
## Enables FMOD's Studio API
studio = ["fmod-audio-sys/studio"]
default = ["studio"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu" # crate is published from this platform
targets = []

rustc-args = ["--cfg", "use_docs_bindings"]

features = ["fmod-audio-sys/force-docs-bindings"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
