[package]
name = "fmod-audio-sys"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "ffi bindings to FMOD and FMOD Studio"
repository = "https://github.com/Speak2Erase/fmod-oxide"
keywords = ["gamedev", "audio", "sound", "fmod"]
categories = ["ffi", "api-bindings", "game-development", "multimedia::audio"]
readme = "README.md"

build = "build.rs"

include = ["docs/documentation.rs", "src/*", "build.rs"]
links = "fmod"

[lib]
name = "fmod_sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.7.2"

document-features = "0.2"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"

[features]
## Forcefully link to the FMOD debug build.
force-debug = []
## Force using the docs.rs generated bindings (NOT RECOMMENDED.)
force-docs-bindings = []

## Disable if you want to link FMOD yourself
link-fmod = []

## Generate bindings to FMOD's STudio API
studio = []
default = ["link-fmod", "studio"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu" # crate is published from this platform
targets = []

features = ["force-docs-bindings"]
