[package]
name = "lanyard"
version = "0.1.3"
keywords = ["ffi", "cstr", "cstring", "string"]
categories = ["data-structures"]
readme = "README.md"
description = "UTF-8 C string types"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[features]
alloc = []
std = ["alloc"]

default = ["alloc"]
